--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "dev:harmony-hybrid": "bun run build:harmony-hybrid -- --watch",
     "lint": "prettier --write . && stylelint --allow-empty-input \"src/*.{css,scss}\"",
     "prettier": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "weapp-tw patch"
   },
   "lint-staged": {
     "src/*.{js,ts,tsx}": "eslint --fix",
@@ -47,21 +48,19 @@
     "@commitlint/config-conventional": "^19.4.1",
     "@tarojs/components": "4.0.5",
     "@tarojs/helper": "4.0.5",
-    "@tarojs/plugin-platform-weapp": "4.0.5",
+    "@tarojs/plugin-framework-react": "4.0.5",
     "@tarojs/plugin-platform-alipay": "4.0.5",
-    "@tarojs/plugin-platform-tt": "4.0.5",
-    "@tarojs/plugin-platform-swan": "4.0.5",
-    "@tarojs/plugin-platform-jd": "4.0.5",
-    "@tarojs/plugin-platform-qq": "4.0.5",
     "@tarojs/plugin-platform-h5": "4.0.5",
     "@tarojs/plugin-platform-harmony-hybrid": "4.0.5",
+    "@tarojs/plugin-platform-jd": "4.0.5",
+    "@tarojs/plugin-platform-qq": "4.0.5",
+    "@tarojs/plugin-platform-swan": "4.0.5",
+    "@tarojs/plugin-platform-tt": "4.0.5",
+    "@tarojs/plugin-platform-weapp": "4.0.5",
+    "@tarojs/react": "4.0.5",
     "@tarojs/runtime": "4.0.5",
     "@tarojs/shared": "4.0.5",
     "@tarojs/taro": "4.0.5",
-    "@tarojs/plugin-framework-react": "4.0.5",
-    "@tarojs/react": "4.0.5",
-    "react-dom": "^18.0.0",
-    "react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
     "autoprefixer": "^10.4.20",
@@ -69,11 +68,15 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
+    "postcss-rem-to-responsive-pixel": "^6.0.1",
     "prettier-plugin-tailwindcss": "^0.6.6",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "stylelint": "^16.9.0",
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "weapp-tailwindcss": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
@@ -83,7 +86,6 @@
     "babel-preset-taro": "4.0.5",
     "eslint-config-taro": "4.0.5",
     "eslint": "^8.57.0",
-    "stylelint": "^16.4.0",
     "terser": "^5.30.4",
     "vite": "^4.2.0",
     "@babel/preset-react": "^7.24.1",
