--- a/project.config.json
+++ b/project.config.json
@@ -1,8 +1,8 @@
 {
   "miniprogramRoot": "./dist",
-  "projectname": "vemdom",
-  "description": "vemdom",
-  "appid": "touristappid",
+  "projectname": "粤ICP备20009363号-4X",
+  "description": "粤ICP备20009363号-4X",
+  "appid": "wx3ff186d252a2bcfe",
   "setting": {
     "urlCheck": true,
     "es6": false,
