--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vemdom",
+  "name": "taro-app",
   "version": "1.0.0",
   "private": true,
   "description": "vemdom",
@@ -44,8 +44,10 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.24.4",
+    "@cakioe/kit.js": "^1.3.3",
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
+    "@nutui/nutui-react": "^2.6.17",
     "@tarojs/components": "4.0.5",
     "@tarojs/helper": "4.0.5",
     "@tarojs/plugin-framework-react": "4.0.5",
@@ -64,6 +66,7 @@
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
     "autoprefixer": "^10.4.20",
+    "cache-loader": "^4.1.0",
     "commitlint": "^19.4.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.5",
@@ -76,6 +79,8 @@
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "tailwindcss": "^3.4.10",
+    "taro-plugin-compiler-optimization": "^1.0.4",
+    "thread-loader": "^4.0.2",
     "weapp-tailwindcss": "^3.5.1"
   },
   "devDependencies": {
