--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.3.0",
     "stylelint": "^16.9.0",
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
