--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@nutui/nutui-react": "^2.6.17",
+    "@redux-devtools/extension": "^3.3.0",
     "@tarojs/components": "4.0.5",
     "@tarojs/helper": "4.0.5",
     "@tarojs/plugin-framework-react": "4.0.5",
@@ -70,19 +71,22 @@
     "commitlint": "^19.4.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.5",
+    "immer": "^10.1.1",
     "lint-staged": "^15.2.9",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
+    "simple-zustand-devtools": "^1.1.0",
     "stylelint": "^16.9.0",
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "tailwindcss": "^3.4.10",
     "taro-plugin-compiler-optimization": "^1.0.4",
     "thread-loader": "^4.0.2",
-    "weapp-tailwindcss": "^3.5.1"
+    "weapp-tailwindcss": "^3.5.1",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
