--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,13 @@
   "arrowParens": "avoid",
   "printWidth": 120,
   "tabWidth": 2,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ],
+  "importOrder": [
+    "^@?\\w",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
