--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "taro-app",
   "version": "1.0.0",
   "private": true,
+  "author": {
+    "name": "cleveng",
+    "email": "cleveng@gmail.com"
+  },
+  "appid": "xxxx",
+  "license": "MIT",
   "description": "vemdom",
   "templateInfo": {
     "name": "default",
@@ -31,7 +37,8 @@
     "lint": "prettier --write . && stylelint --allow-empty-input \"src/*.{css,scss}\"",
     "prettier": "prettier --write .",
     "prepare": "husky",
-    "postinstall": "weapp-tw patch"
+    "postinstall": "weapp-tw patch",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "lint-staged": {
     "src/*.{js,ts,tsx}": "eslint --fix",
@@ -41,74 +48,79 @@
     "defaults and fully supports es6-module",
     "maintained node versions"
   ],
-  "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.24.4",
-    "@cakioe/kit.js": "^1.3.3",
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
-    "@nutui/nutui-react": "^2.6.17",
+    "@babel/runtime": "^7.25.7",
+    "@cakioe/kit.js": "^1.6.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "^4.3.3",
+    "@graphql-codegen/introspection": "^4.0.3",
+    "@nutui/nutui-react-taro": "^2.6.21",
     "@redux-devtools/extension": "^3.3.0",
-    "@tarojs/components": "4.0.5",
-    "@tarojs/helper": "4.0.5",
-    "@tarojs/plugin-framework-react": "4.0.5",
-    "@tarojs/plugin-platform-alipay": "4.0.5",
-    "@tarojs/plugin-platform-h5": "4.0.5",
-    "@tarojs/plugin-platform-harmony-hybrid": "4.0.5",
-    "@tarojs/plugin-platform-jd": "4.0.5",
-    "@tarojs/plugin-platform-qq": "4.0.5",
-    "@tarojs/plugin-platform-swan": "4.0.5",
-    "@tarojs/plugin-platform-tt": "4.0.5",
-    "@tarojs/plugin-platform-weapp": "4.0.5",
-    "@tarojs/react": "4.0.5",
-    "@tarojs/runtime": "4.0.5",
-    "@tarojs/shared": "4.0.5",
-    "@tarojs/taro": "4.0.5",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
+    "@tarojs/components": "4.0.6",
+    "@tarojs/helper": "4.0.6",
+    "@tarojs/plugin-framework-react": "4.0.6",
+    "@tarojs/plugin-html": "^4.0.6",
+    "@tarojs/plugin-platform-alipay": "4.0.6",
+    "@tarojs/plugin-platform-h5": "4.0.6",
+    "@tarojs/plugin-platform-harmony-hybrid": "4.0.6",
+    "@tarojs/plugin-platform-jd": "4.0.6",
+    "@tarojs/plugin-platform-qq": "4.0.6",
+    "@tarojs/plugin-platform-swan": "4.0.6",
+    "@tarojs/plugin-platform-tt": "4.0.6",
+    "@tarojs/plugin-platform-weapp": "4.0.6",
+    "@tarojs/react": "4.0.6",
+    "@tarojs/runtime": "4.0.6",
+    "@tarojs/shared": "4.0.6",
+    "@tarojs/taro": "4.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "autoprefixer": "^10.4.20",
+    "babel-plugin-import": "^1.13.8",
     "cache-loader": "^4.1.0",
-    "commitlint": "^19.4.0",
+    "commitlint": "^19.5.0",
     "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.1.5",
+    "eslint-plugin-import": "^2.31.0",
+    "husky": "^9.1.6",
     "immer": "^10.1.1",
-    "lint-staged": "^15.2.9",
-    "postcss-rem-to-responsive-pixel": "^6.0.1",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "lint-staged": "^15.2.10",
+    "postcss-rem-to-responsive-pixel": "^6.0.2",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-icons": "^5.3.0",
     "simple-zustand-devtools": "^1.1.0",
     "stylelint": "^16.9.0",
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.13",
     "taro-plugin-compiler-optimization": "^1.0.4",
-    "thread-loader": "^4.0.2",
-    "weapp-tailwindcss": "^3.5.1",
-    "zustand": "^4.5.5"
+    "thread-loader": "^4.0.4",
+    "weapp-tailwindcss": "^3.5.3",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
-    "@tarojs/cli": "4.0.5",
-    "@tarojs/vite-runner": "4.0.5",
-    "babel-preset-taro": "4.0.5",
-    "eslint-config-taro": "4.0.5",
-    "eslint": "^8.57.0",
-    "terser": "^5.30.4",
-    "vite": "^4.2.0",
-    "@babel/preset-react": "^7.24.1",
-    "@types/react": "^18.0.0",
-    "@vitejs/plugin-react": "^4.3.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "react-refresh": "^0.14.0",
-    "@preact/preset-vite": "^2.8.2",
+    "@babel/core": "^7.25.7",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@tarojs/cli": "4.0.6",
+    "@tarojs/vite-runner": "4.0.6",
+    "babel-preset-taro": "4.0.6",
+    "eslint-config-taro": "4.0.6",
+    "eslint": "8.57.1",
+    "terser": "^5.34.1",
+    "vite": "4.2.0",
+    "@babel/preset-react": "^7.25.7",
+    "@types/react": "^18.3.11",
+    "@vitejs/plugin-react": "^4.3.2",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "react-refresh": "^0.14.2",
+    "@preact/preset-vite": "^2.9.1",
     "@prefresh/core": "^1.5.2",
     "@prefresh/babel-plugin": "^0.5.1",
-    "sass": "^1.75.0",
-    "typescript": "^5.4.5",
-    "postcss": "^8.4.38"
+    "sass": "^1.79.4",
+    "typescript": "^5.6.2",
+    "postcss": "^8.4.47"
   }
 }
