perf: add custom-tab-bar component

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,9 @@
     "enhance": false,
     "compileHotReLoad": false,
     "postcss": false,
-    "minified": false
+    "minified": false,
+    "ignoreDevUnusedFiles": false,
+    "ignoreUploadUnusedFiles": false
   },
   "compileType": "miniprogram"
 }
