--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:qq": "taro build --type qq",
     "build:jd": "taro build --type jd",
     "build:harmony-hybrid": "taro build --type harmony-hybrid",
-    "dev:weapp": "bun run build:weapp -- --watch",
+    "dev:weapp": "bun run build:weapp -- --watch --no-cache",
     "dev:swan": "bun run build:swan -- --watch",
     "dev:alipay": "bun run build:alipay -- --watch",
     "dev:tt": "bun run build:tt -- --watch",
@@ -56,24 +56,27 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.3.3",
     "@graphql-codegen/introspection": "^4.0.3",
+    "@nutui/icons-react-taro": "^1.0.5",
     "@nutui/nutui-react-taro": "^2.6.21",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@redux-devtools/extension": "^3.3.0",
-    "@tarojs/components": "4.0.6",
-    "@tarojs/helper": "4.0.6",
-    "@tarojs/plugin-framework-react": "4.0.6",
-    "@tarojs/plugin-html": "^4.0.6",
-    "@tarojs/plugin-platform-alipay": "4.0.6",
-    "@tarojs/plugin-platform-h5": "4.0.6",
-    "@tarojs/plugin-platform-harmony-hybrid": "4.0.6",
-    "@tarojs/plugin-platform-jd": "4.0.6",
-    "@tarojs/plugin-platform-qq": "4.0.6",
-    "@tarojs/plugin-platform-swan": "4.0.6",
-    "@tarojs/plugin-platform-tt": "4.0.6",
-    "@tarojs/plugin-platform-weapp": "4.0.6",
-    "@tarojs/react": "4.0.6",
-    "@tarojs/runtime": "4.0.6",
-    "@tarojs/shared": "4.0.6",
-    "@tarojs/taro": "4.0.6",
+    "@tarojs/components": "4.0.5",
+    "@tarojs/helper": "4.0.5",
+    "@tarojs/plugin-framework-react": "4.0.5",
+    "@tarojs/plugin-html": "4.0.6",
+    "@tarojs/plugin-platform-alipay": "4.0.5",
+    "@tarojs/plugin-platform-h5": "4.0.5",
+    "@tarojs/plugin-platform-harmony-hybrid": "4.0.5",
+    "@tarojs/plugin-platform-jd": "4.0.5",
+    "@tarojs/plugin-platform-qq": "4.0.5",
+    "@tarojs/plugin-platform-swan": "4.0.5",
+    "@tarojs/plugin-platform-tt": "4.0.5",
+    "@tarojs/plugin-platform-weapp": "4.0.5",
+    "@tarojs/react": "4.0.5",
+    "@tarojs/runtime": "4.0.5",
+    "@tarojs/shared": "4.0.5",
+    "@tarojs/taro": "4.0.5",
+    "@tarojs/webpack5-runner": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "autoprefixer": "^10.4.20",
@@ -96,31 +99,29 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "tailwindcss": "^3.4.13",
     "taro-plugin-compiler-optimization": "^1.0.4",
-    "thread-loader": "^4.0.4",
+    "thread-loader": "^4.0.2",
     "weapp-tailwindcss": "^3.5.3",
+    "webpack": "^5",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
     "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@tarojs/cli": "4.0.6",
-    "@tarojs/vite-runner": "4.0.6",
-    "babel-preset-taro": "4.0.6",
-    "eslint-config-taro": "4.0.6",
-    "eslint": "8.57.1",
-    "terser": "^5.34.1",
-    "vite": "4.2.0",
     "@babel/preset-react": "^7.25.7",
+    "@preact/preset-vite": "^2.9.1",
+    "@prefresh/babel-plugin": "^0.5.1",
+    "@prefresh/core": "^1.5.2",
+    "@tarojs/cli": "4.0.5",
     "@types/react": "^18.3.11",
-    "@vitejs/plugin-react": "^4.3.2",
+    "babel-preset-taro": "4.0.6",
+    "eslint": "8.57.1",
+    "eslint-config-taro": "4.0.6",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "postcss": "^8.4.47",
     "react-refresh": "^0.14.2",
-    "@preact/preset-vite": "^2.9.1",
-    "@prefresh/core": "^1.5.2",
-    "@prefresh/babel-plugin": "^0.5.1",
     "sass": "^1.79.4",
-    "typescript": "^5.6.2",
-    "postcss": "^8.4.47"
+    "terser": "^5.34.1",
+    "typescript": "^5.6.2"
   }
 }
