perf: config zustand

--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "build:qq": "taro build --type qq",
     "build:jd": "taro build --type jd",
     "build:harmony-hybrid": "taro build --type harmony-hybrid",
-    "dev:weapp": "bun run build:weapp -- --watch --no-cache",
+    "dev:weapp": "export NODE_OPTIONS=--openssl-legacy-provider && bun run build:weapp -- --watch --no-cache",
     "dev:swan": "bun run build:swan -- --watch",
     "dev:alipay": "bun run build:alipay -- --watch",
     "dev:tt": "bun run build:tt -- --watch",
-    "dev:h5": "bun run build:h5 -- --watch",
+    "dev:h5": "export NODE_OPTIONS=--openssl-legacy-provider && bun run build:h5 -- --watch",
     "dev:rn": "bun run build:rn -- --watch",
     "dev:qq": "bun run build:qq -- --watch",
     "dev:jd": "bun run build:jd -- --watch",
