--- a/.eslintrc
+++ b/.eslintrc
@@ -31,20 +31,20 @@
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/array-type": "off",
-    "mport/order": [
+    "import/order": [
       "error",
       {
         "groups": [
           "builtin",
           "external",
+          "type",
           "internal",
           [
             "sibling",
             "parent"
           ],
           "index",
-          "object",
-          "type"
+          "object"
         ],
         "pathGroups": [
           {
