--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "tailwindcss": "^3.4.13",
     "taro-plugin-compiler-optimization": "^1.0.4",
+    "terser-webpack-plugin": "^5.3.10",
     "thread-loader": "^4.0.4",
     "weapp-tailwindcss": "^3.5.3",
     "webpack": "^5.95.0",
