--- a/package.json
+++ b/package.json
@@ -76,15 +76,10 @@
     "@tarojs/runtime": "4.0.5",
     "@tarojs/shared": "4.0.5",
     "@tarojs/taro": "4.0.5",
-    "@tarojs/webpack5-runner": "^4.0.6",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
     "autoprefixer": "^10.4.20",
-    "babel-plugin-import": "^1.13.8",
     "cache-loader": "^4.1.0",
     "commitlint": "^19.5.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
     "husky": "^9.1.6",
     "immer": "^10.1.1",
     "lint-staged": "^15.2.10",
@@ -102,26 +97,35 @@
     "terser-webpack-plugin": "^5.3.10",
     "thread-loader": "^4.0.4",
     "weapp-tailwindcss": "^3.5.3",
-    "webpack": "^5.95.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.7",
-    "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/preset-react": "^7.25.7",
+    "@babel/core": "^7.8.0",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/preset-react": "^7.24.1",
+    "babel-plugin-import": "^1.13.8",
     "@preact/preset-vite": "^2.9.1",
     "@prefresh/babel-plugin": "^0.5.1",
     "@prefresh/core": "^1.5.2",
-    "@tarojs/cli": "4.0.5",
+    "@tarojs/cli": "4.0.6",
+    "webpack": "5.78.0",
+    "@tarojs/taro-loader": "4.0.6",
+    "@tarojs/webpack5-runner": "^4.0.6",
+    "@types/webpack-env": "^1.13.6",
     "@types/react": "^18.3.11",
     "babel-preset-taro": "4.0.6",
     "eslint": "8.57.1",
     "eslint-config-taro": "4.0.6",
     "eslint-plugin-react": "^7.37.1",
+    "ts-node": "^10.9.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8.4.47",
     "react-refresh": "^0.14.2",
+    "eslint-plugin-import": "^2.31.0",
     "sass": "^1.79.4",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "terser": "^5.34.1",
     "typescript": "^5.6.2"
   }
